--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,13 @@ dependencies:
   riverpod_annotation: ^2.3.3
   flutter_hooks: ^0.20.3
   hooks_riverpod: ^2.4.9
+  intl: ^0.18.1
+  flutter_localization: ^0.1.14
+  googleapis: ^12.0.0
+  extension_google_sign_in_as_googleapis_auth: ^2.0.11
+  googleapis_auth: ^1.4.1
+
+
 
 dev_dependencies:
   flutter_test:
