--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   googleapis: ^12.0.0
   extension_google_sign_in_as_googleapis_auth: ^2.0.11
   googleapis_auth: ^1.4.1
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.13.6
 
 
 
