--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: ^0.19.0
   flutter_localization: ^0.2.0
   googleapis: ^12.0.0
+  google_sign_in: ^6.1.0
   extension_google_sign_in_as_googleapis_auth: ^2.0.11
   googleapis_auth: ^1.4.1
   firebase_core: ^3.13.0
